I2PTunnel: (dark) fix alignment of tunnel control buttons @ (min-width: 1500px)

--- a/installer/resources/themes/console/dark/i2ptunnel.css
+++ b/installer/resources/themes/console/dark/i2ptunnel.css
@@ -1501,6 +1501,10 @@ input[type=text] + label {
   #registration .displayText {
     width: 800px;
   }
+
+  .tunnelControl .control {
+    margin: 3px -3px 3px 0 !important;
+  }
 }
 
 #keyringManager {
